[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/PauseOverlay.gd" type="Script" id=1]

[node name="PauseOverlay" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 480.0
margin_top = 257.0
margin_right = 544.0
margin_bottom = 343.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 38.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 64.0
margin_bottom = 62.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 64.0
margin_bottom = 86.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
